codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__brew_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1380
expression: rendered
---
╭──────────────────────────────────────────────────────╮
│ ✨ Update available! 0.160.1 -> 9.9.9                │
│ Run brew upgrade EmpiricaAI/tap/ecodex to update.    │
│                                                      │
│ See full release notes:                              │
│ https://github.com/EmpiricaAI/ecodex/releases/latest │
╰──────────────────────────────────────────────────────╯
