codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_header_indicates_yolo_mode.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1860
expression: rendered
---

  ∴ ecodex (vtest)  ·  turtles all the way down
     /tmp/project
  permissions: YOLO mode
