codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 776
expression: rendered
---

  ∴ ecodex (v0.160.0)  ·  turtles all the way down
     /tmp/project

  Tip: Model just became available
