codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__standalone_unix_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1371
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.160.0 -> 9.9.9                                                                      │
│ Run sh -c 'curl -fsSL https://raw.githubusercontent.com/EmpiricaAI/ecodex/main/scripts/install.sh | bash'  │
│ to update.                                                                                                 │
│                                                                                                            │
│ See full release notes:                                                                                    │
│ https://github.com/EmpiricaAI/ecodex/releases/latest                                                       │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
